add polifils, fix resposive

--- a/app/user-list/user-list.less
+++ b/app/user-list/user-list.less
@@ -1,12 +1,6 @@
 a.disabled {
     cursor: not-allowed;
-}
-
-.btn-back {
-    float: right;
-    .fa {
-        margin-right: 5px;
-    }
+    pointer-events: none;
 }
 
 .table.table-list {
@@ -29,6 +23,7 @@ a.disabled {
 
 .online-status {
     color: @text-muted;
+    font-size: 85%;
     .fa {
         margin-right: 5px;
     }
