--- a/app/user-details/user-details.less
+++ b/app/user-details/user-details.less
@@ -1,22 +1,33 @@
-.friends-others {
-    display: table;
-    > div {
-        width: 50px;
-        height: 50px;
-        display: table-cell;
-        color: @text-muted;
-        text-align: center;
-        font-size: 10px;
-        line-height: 12px;
-        vertical-align: middle;
+.user-details {
+    .friends-others {
+        //display: table;
+        > div {
+            width: 50px;
+            height: 50px;
+            display: table-cell;
+            color: @text-muted;
+            text-align: center;
+            font-size: 10px;
+            line-height: 12px;
+            vertical-align: middle;
+        }
     }
-}
 
-h2 {
-    .online-status {
-        display: block;
-        float: right;
-        font-size: 40%;
+    .user-online {
         margin-top: 8px;
+    }
+
+    @media (max-width: @screen-xs-max) {
+        .img-responsive {
+            width: 100%;
+        }
+        .user-name {
+            text-align: center;
+        }
+        .user-online {
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
     }
 }
