add page404 handler

--- a/app/_configuration/main.less
+++ b/app/_configuration/main.less
@@ -14,3 +14,4 @@
 @import "../user-list/user-list";
 @import "../user-list-pretty/user-list-pretty";
 @import "../user-details/user-details";
+@import "../errors/error-404";
