--- a/app/errors/error-404.less
+++ b/app/errors/error-404.less
@@ -7,4 +7,20 @@
         padding: 40px 15px;
         text-align: center;
     }
+
+    .error-actions {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .btn {
+        .fa {
+            margin-right: 5px;
+        }
+
+        + .btn {
+            margin-left: 10px;
+        }
+    }
+
 }
