--- a/app/footer/footer.less
+++ b/app/footer/footer.less
@@ -16,7 +16,7 @@ body {
 }
 
 #footer {
-    background: #f5f5f5;
+    background: #eee;
     width: 100%;
     height: @height;
     position: absolute;
