--- a/app/user-details/user-details.less
+++ b/app/user-details/user-details.less
@@ -22,7 +22,10 @@
         list-style: none;
         overflow: hidden;
         padding-left: 0;
-        margin: -5px;
+        margin-left: -5px;
+        margin-right: -5px;
+        margin-top: -5px;
+        margin-bottom: 15px;
 
         li {
             position: relative;
