:thumbsup: move to react-router :one:.:zero:

--- a/app/_less/bootstrap.less
+++ b/app/_less/bootstrap.less
@@ -3,6 +3,7 @@
 
 // CUSTOMIZATION
 @navbar-border-radius: 0;
+@font-family-base: Roboto, sans-serif;
 
 @import "../../node_modules/bootstrap/less/mixins";
 // Reset and dependencies
