--- a/app/user-list/user-list.less
+++ b/app/user-list/user-list.less
@@ -1,6 +1,6 @@
 a.disabled {
     cursor: not-allowed;
-    pointer-events: none;
+    //pointer-events: none;
 }
 
 .table.table-list {
@@ -22,6 +22,7 @@ a.disabled {
 }
 
 .online-status {
+    white-space: nowrap;
     color: @text-muted;
     font-size: 85%;
     .fa {
