(1) move to react 0.14 (2) recenlty viewed users functionality (3) code fixes

--- a/app/_less/bootstrap.less
+++ b/app/_less/bootstrap.less
@@ -4,6 +4,7 @@
 // CUSTOMIZATION
 @navbar-border-radius: 0;
 @font-family-base: Roboto, sans-serif;
+@table-bg-hover: #f9f9f9;
 
 @import "../../node_modules/bootstrap/less/mixins";
 // Reset and dependencies
