--- a/app/_configuration/main.less
+++ b/app/_configuration/main.less
@@ -14,4 +14,5 @@
 @import "../user-list/user-list";
 @import "../user-list-pretty/user-list-pretty";
 @import "../user-details/user-details";
+@import "../recently-viewed/recently-viewed";
 @import "../errors/error-404";
