--- a/app/header/header.less
+++ b/app/header/header.less
@@ -7,12 +7,16 @@
 .navbar-nav {
     float: left;
     margin: 0;
-}
 
-.navbar-nav > li {
-    float: left;
-}
+    > li {
+        float: left;
 
-.navbar-nav > li > a {
-    padding: 15px;
+        > a {
+            padding: 15px;
+
+            .fa {
+                margin-right: 5px;
+            }
+        }
+    }
 }
